# Timely

./: .gitignore  Cargo.toml  dev.db
.sqlx/: query-07772151113c6dab35045e736760e17e119e3f221653757a526da5fb87f165bc.json  query-2d9566def0b1d3149f677bf5bcaa480e3e3560a97534cc418f464e5262f39d8d.json  query-5cc805742700e9928dd749b7a89f1a063f2aabe1072cd4a917e7128f02e7ee23.json  query-607186132058c108f12793e5973553c44f313852f39873a8796af752265e1bdc.json  query-956280dbf077fcac661ddc4a5231da7639a01d6af297b27ac986952337d49fb3.json  query-9ca6178ae2a8686f6821bf2a81a6dcc0f1ed73184970ad7cebf5beef138082a1.json
migrations/: 20240228160755_todos_table.sql  20240228200856_remove_parent_id.sql  20240228201616_real_remove_parent_id.sql  20240416121643_add_parent_id.sql  20240416123207_make_parent_nullable.sql  20250307091032_add_date_column.sql
src/: main.rs
templates/: index.html  index.html.tera  macros.html
timely-app/: Cargo.toml
timely-app/src/: main.rs
timely-lib/: Cargo.toml
timely-lib/src/: lib.rs
