workspace = { members = ["timely-app"] }
[package]
name = "timely"
version = "0.1.0"
edition = "2021"


[dependencies]
timely-lib = { path = "./timely-lib" }
axum = {version = "0.7", features = ["json"]}
axum-template = {version = "2", features = ["tera"]}
sqlx = {version = "0.8", features = ["runtime-tokio", "postgres"]}
tera = "1"
uuid = { version = "1", features = ["serde", "v7"] }
tokio = {version = "1", features = ["rt-multi-thread"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
anyhow = "1"
sha2 = "0.10"
base16ct = "0.2"
