workspace = { members = ["timely-app"] }
[package]
name = "timely"
version = "0.2.0"
edition = "2021"


[dependencies]
timely-lib = { path = "./timely-lib" }
axum = {version = "0.8", features = ["json", "macros"]}
axum-extra = { version = "0.10.0", features = ["cookie"]}
axum-template = {version = "2", features = ["tera"]}
sqlx = {version = "0.8", features = ["runtime-tokio", "postgres"]}
tera = "1"
uuid = { version = "1", features = ["serde", "v7"] }
tokio = {version = "1", features = ["rt-multi-thread"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
anyhow = "1"
sha2 = "0.10"
base16ct = "0.2"
time = "0.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tower-http = {version="0.6.2", features=["trace"]}

[profile.release]
lto = true
