[package]
name = "timely-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version = "0.13.1", features=["tokio"]}
timely-lib = { path = "../timely-lib" }
log = "0.4"
reqwest = {version = "0.12.9", features=["json"]}
serde = { version = "1", features = ["derive"]}
serde_json = "1"
once_cell = "1.20"
config = "0.14"
toml = "0.8"
indexmap = "2"

[profile.release]
lto = true
